fix timeline for web