@@ -1,13 +1,11 @@
 package com.group6.Rental_Car.services.order;
 
-
 import com.group6.Rental_Car.dtos.order.OrderCreateRequest;
 import com.group6.Rental_Car.dtos.order.OrderResponse;
 import com.group6.Rental_Car.dtos.order.OrderUpdateRequest;
 import com.group6.Rental_Car.dtos.order.VehicleOrderHistoryResponse;
 import com.group6.Rental_Car.dtos.verifyfile.OrderVerificationResponse;
 import com.group6.Rental_Car.entities.*;
-import com.group6.Rental_Car.enums.UserStatus;
 import com.group6.Rental_Car.exceptions.BadRequestException;
 import com.group6.Rental_Car.exceptions.ResourceNotFoundException;
 import com.group6.Rental_Car.repositories.*;
@@ -18,14 +16,12 @@ import com.group6.Rental_Car.utils.JwtUserDetails;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -34,471 +30,270 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class RentalOrderServiceImpl implements RentalOrderService {
 
-    private final UserRepository userRepository;
-    private final VehicleRepository vehicleRepository;
     private final RentalOrderRepository rentalOrderRepository;
+    private final RentalOrderDetailRepository rentalOrderDetailRepository;
+    private final VehicleRepository vehicleRepository;
+    private final VehicleModelService vehicleModelService;
     private final PricingRuleService pricingRuleService;
     private final CouponService couponService;
+    private final UserRepository userRepository;
     private final ModelMapper modelMapper;
-    private final VehicleModelService vehicleModelService;
-    private final EmployeeScheduleRepository employeeScheduleRepository;
-    private final IncidentRepository incidentRepository;
-    private static final ZoneId VN_TZ = ZoneId.of("Asia/Ho_Chi_Minh");
-    private static final String SHIFT_ALL = "ALL";
+
+    // ========================
+    // 1️⃣ TẠO ĐƠN THUÊ
+    // ========================
     @Override
+    @Transactional
     public OrderResponse createOrder(OrderCreateRequest request) {
 
-
-        JwtUserDetails userDetails = currentUser();
-        UUID customerId = userDetails.getUserId();
-
-        User customer = userRepository.findById(customerId)
+        JwtUserDetails jwt = currentUser();
+        User customer = userRepository.findById(jwt.getUserId())
                 .orElseThrow(() -> new ResourceNotFoundException("Customer not found"));
 
         Vehicle vehicle = vehicleRepository.findById(request.getVehicleId())
                 .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found"));
 
-        if (!"available".equalsIgnoreCase(vehicle.getStatus())) {
+        if (!"AVAILABLE".equalsIgnoreCase(vehicle.getStatus())) {
             throw new BadRequestException("Xe hiện không sẵn sàng để thuê (" + vehicle.getStatus() + ")");
         }
 
-        VehicleModel model = vehicleModelService.findByVehicle(vehicle);
-        if (model == null) {
-            throw new ResourceNotFoundException("Không tìm thấy model cho xe ID = " + vehicle.getVehicleId());
+        // Xác định ngày thuê
+        LocalDateTime start = request.getStartTime();
+        LocalDateTime end = request.getEndTime();
+        if (start == null || end == null || !end.isAfter(start)) {
+            throw new BadRequestException("Thời gian thuê không hợp lệ");
         }
 
-        PricingRule rule = pricingRuleService.getPricingRuleBySeatAndVariant(
-                model.getSeatCount(), model.getVariant());
+        // Tìm rule giá theo xe
+        VehicleModel model = vehicleModelService.findByVehicle(vehicle);
+        PricingRule rule = pricingRuleService.getPricingRuleBySeatAndVariant(model.getSeatCount(), model.getVariant());
 
+        // Coupon (nếu có)
         Coupon coupon = null;
-        if (request.getCouponCode() != null && !request.getCouponCode().trim().isEmpty()) {
+        if (request.getCouponCode() != null && !request.getCouponCode().isBlank()) {
             coupon = couponService.getCouponByCode(request.getCouponCode().trim());
         }
 
-        BigDecimal totalPrice = pricingRuleService.calculateTotalPrice(
-                rule, coupon, request.getPlannedHours(), request.getPlannedHours());
+        // Tính số ngày thuê (làm tròn lên)
+        long rentalDays = Math.max(1, ChronoUnit.DAYS.between(start.toLocalDate(), end.toLocalDate()));
+        BigDecimal basePrice = rule.getDailyPrice().multiply(BigDecimal.valueOf(rentalDays));
 
-
-        BigDecimal depositAmount = BigDecimal.ZERO;
-        BigDecimal remainingAmount = totalPrice;
-        LocalDateTime startTime = request.getStartTime();
-        if (startTime == null) {
-            throw new BadRequestException("Vui lòng chọn thời gian bắt đầu thuê xe");
+        // Áp dụng giá lễ nếu có
+        if (request.isHoliday()) {
+            basePrice = rule.getHolidayPrice() != null
+                    ? rule.getHolidayPrice().multiply(BigDecimal.valueOf(rentalDays))
+                    : basePrice;
         }
-        if (startTime.isBefore(LocalDateTime.now())) {
-            throw new BadRequestException("Thời gian bắt đầu không hợp lệ (phải là hiện tại hoặc tương lai)");
-        }
-        LocalDateTime endTime = startTime.plusHours(request.getPlannedHours());
 
-        vehicle.setStatus("RESERVED");
-        vehicleRepository.save(vehicle);
+        // Áp dụng coupon nếu có
+        BigDecimal totalPrice = couponService.applyCouponIfValid(coupon, basePrice);
 
-        RentalOrder order = modelMapper.map(request, RentalOrder.class);
+        // Tạo RentalOrder tổng
+        RentalOrder order = new RentalOrder();
         order.setCustomer(customer);
-        order.setVehicle(vehicle);
         order.setCoupon(coupon);
-        order.setStartTime(startTime);
-        order.setEndTime(endTime);
-        order.setPlannedHours(request.getPlannedHours());
-        order.setPenaltyFee(BigDecimal.ZERO);
         order.setTotalPrice(totalPrice);
-        order.setDepositAmount(depositAmount);
-        order.setRemainingAmount(depositAmount);
         order.setStatus("PENDING");
-
-
         rentalOrderRepository.save(order);
 
+        // Tạo detail RENTAL chính
+        RentalOrderDetail detail = RentalOrderDetail.builder()
+                .order(order)
+                .vehicle(vehicle)
+                .type("RENTAL")
+                .startTime(start)
+                .endTime(end)
+                .price(totalPrice)
+                .status("confirmed")
+                .build();
+        rentalOrderDetailRepository.save(detail);
+
+        // Cập nhật trạng thái xe
+        vehicle.setStatus("BOOKED");
+        vehicleRepository.save(vehicle);
+
+        // Map ra response
         OrderResponse response = modelMapper.map(order, OrderResponse.class);
         response.setVehicleId(vehicle.getVehicleId());
         response.setCouponCode(coupon != null ? coupon.getCode() : null);
         response.setTotalPrice(totalPrice);
-        response.setDepositAmount(depositAmount);
-        response.setRemainingAmount(remainingAmount);
-        RentalStation station = vehicle.getRentalStation();
-        Integer stationId = (station != null) ? station.getStationId() : null;
-        response.setStationId(stationId);
-
         return response;
     }
 
+    // ========================
+    // 2️⃣ CẬP NHẬT ĐƠN
+    // ========================
     @Override
-    @Transactional
-    public OrderResponse confirmPickup(UUID orderId) {
+    public OrderResponse updateOrder(UUID orderId, OrderUpdateRequest req) {
         RentalOrder order = rentalOrderRepository.findById(orderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn thuê"));
 
-        if (!"DEPOSITED".equalsIgnoreCase(order.getStatus())
-                && !"PAYMENT_SUCCESS".equalsIgnoreCase(order.getStatus())) {
-            throw new BadRequestException("Đơn này không thể xác nhận nhận xe khi trạng thái là: " + order.getStatus());
+        // Cập nhật status
+        if (req.getStatus() != null) order.setStatus(req.getStatus());
+
+        // Cập nhật coupon
+        if (req.getCouponCode() != null && !req.getCouponCode().isBlank()) {
+            Coupon coupon = couponService.getCouponByCode(req.getCouponCode().trim());
+            order.setCoupon(coupon);
         }
 
-        Vehicle vehicle = order.getVehicle();
-        vehicle.setStatus("RENTAL");
-        vehicleRepository.save(vehicle);
+        // Nếu có yêu cầu đổi xe
+        if (req.getNewVehicleId() != null) {
+            Vehicle newVehicle = vehicleRepository.findById(req.getNewVehicleId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xe mới"));
 
-        order.setStatus("RENTAL");
-        order.setStartTime(LocalDateTime.now());
-        rentalOrderRepository.save(order);
-
-        UUID staffId = currentUser().getUserId();
-        EmployeeSchedule es = ensureTodayAllShift(staffId, order.getVehicle(), currentShift());
-        es.setPickupCount(es.getPickupCount() + 1);
-        employeeScheduleRepository.saveAndFlush(es);
-
-        OrderResponse response = modelMapper.map(order, OrderResponse.class);
-        response.setVehicleId(vehicle.getVehicleId());
-        if (order.getCoupon() != null)
-            response.setCouponCode(order.getCoupon().getCode());
-        RentalStation station = vehicle.getRentalStation();
-        Integer stationId = (station != null) ? station.getStationId() : null;
-        response.setStationId(stationId);
-        return response;
-    }
-
-    @Override
-    @Transactional
-    public OrderResponse confirmReturn(UUID orderId, Integer actualHours) {
-        RentalOrder order = rentalOrderRepository.findById(orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn thuê"));
-
-        Vehicle vehicle = order.getVehicle();
-        order.setEndTime(LocalDateTime.now());
-
-        if (actualHours == null || actualHours <= 0) {
-            actualHours = order.getActualHours();
-        }
-        if (actualHours == null || actualHours <= 0) {
-            throw new BadRequestException("Không xác định được số giờ thực tế. Hãy preview trước khi xác nhận trả xe.");
-        }
-
-        order.setActualHours(actualHours);
-        long hoursUsed = actualHours;
-
-        VehicleModel model = vehicleModelService.findByVehicle(vehicle);
-        PricingRule rule = pricingRuleService.getPricingRuleBySeatAndVariant(
-                model.getSeatCount(), model.getVariant());
-
-        BigDecimal basePrice = pricingRuleService.calculateTotalPrice(
-                rule, order.getCoupon(), order.getPlannedHours(), order.getPlannedHours());
-
-        BigDecimal penalty = BigDecimal.ZERO;
-        if (hoursUsed > order.getPlannedHours()) {
-            long exceeded = hoursUsed - order.getPlannedHours();
-            penalty = penalty.add(rule.getExtraHourPrice().multiply(BigDecimal.valueOf(exceeded)));
-        }
-
-        List<Incident> incidents = incidentRepository.findByVehicle_VehicleId(vehicle.getVehicleId());
-        BigDecimal incidentCost = incidents.stream()
-                .filter(i -> i.getCost() != null)
-                .map(Incident::getCost)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        penalty = penalty.add(incidentCost);
-        order.setPenaltyFee(penalty);
-
-        BigDecimal totalPrice = basePrice.add(penalty);
-
-        BigDecimal deposit = order.getDepositAmount() != null ? order.getDepositAmount() : BigDecimal.ZERO;
-        BigDecimal remaining = totalPrice.subtract(deposit);
-        if (remaining.compareTo(BigDecimal.ZERO) < 0) remaining = BigDecimal.ZERO;
-
-        order.setTotalPrice(totalPrice);
-        order.setRemainingAmount(remaining);
-        order.setStatus("AWAIT_FINAL");
-        rentalOrderRepository.save(order);
-
-        vehicle.setStatus("CHECKING");
-        vehicleRepository.save(vehicle);
-
-        UUID staffId = currentUser().getUserId();
-        EmployeeSchedule es = ensureTodayAllShift(staffId, order.getVehicle(), currentShift());
-        es.setReturnCount(es.getReturnCount() + 1);
-        employeeScheduleRepository.saveAndFlush(es);
-
-        OrderResponse response = modelMapper.map(order, OrderResponse.class);
-        response.setVehicleId(vehicle.getVehicleId());
-        response.setCouponCode(order.getCoupon() != null ? order.getCoupon().getCode() : null);
-        response.setPenaltyFee(penalty);
-        response.setRemainingAmount(remaining);
-        response.setTotalPrice(totalPrice);
-        response.setActualHours(actualHours);
-
-        RentalStation station = vehicle.getRentalStation();
-        response.setStationId(station != null ? station.getStationId() : null);
-
-        return response;
-    }
-
-    @Override
-    @Transactional
-    public List<OrderVerificationResponse> getPendingVerificationOrders() {
-
-        List<RentalOrder> orders = rentalOrderRepository.findByStatusIn(
-                List.of("DEPOSITED", "RENTAL", "COMPLETED", "PICKED_UP")
-        );
-            return orders.stream().map(order -> {
-                {
-
-                    User customer = order.getCustomer();
-                    Vehicle vehicle = order.getVehicle();
-
-                    RentalStation station = order.getVehicle().getRentalStation();
-                    Integer stationId = station != null ? station.getStationId() : null;
-
-                    String userStatusDisplay = switch (customer.getStatus()) {
-                        case ACTIVE -> "ĐÃ XÁC THỰC (HỒ SƠ)";
-                        case ACTIVE_PENDING -> "CHƯA XÁC THỰC";
-                        default -> "KHÔNG HỢP LỆ";
-                    };
-
-                    return OrderVerificationResponse.builder()
-                            .userId(customer.getUserId())
-                            .orderId(order.getOrderId().toString())
-                            .customerName(customer.getFullName())
-                            .phone(customer.getPhone())
-                            .vehicleName(vehicle.getVehicleName())
-                            .plateNumber(vehicle.getPlateNumber())
-                            .startTime(order.getStartTime())
-                            .endTime(order.getEndTime())
-                            .totalPrice(order.getTotalPrice())
-                            .depositAmount(order.getDepositAmount())
-                            .status(order.getStatus())
-                            .userStatus(userStatusDisplay)
-                            .stationId(stationId)
-                            .build();
-
-                }
-            }).toList();
-    }
-    @Override
-    public OrderResponse previewReturn(UUID orderId, Integer actualHours) {
-        RentalOrder order = rentalOrderRepository.findById(orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn thuê"));
-
-        Vehicle vehicle = order.getVehicle();
-        if ((actualHours == null || actualHours <= 0) && order.getActualHours() != null && order.getActualHours() > 0) {
-            actualHours = order.getActualHours();
-        }
-        if (actualHours == null || actualHours <= 0) {
-            int planned = order.getPlannedHours() != null ? order.getPlannedHours() : 12;
-            int min, max;
-
-            if (planned <= 24) {
-                min = Math.max(1, planned - 1);
-                max = planned + 14;
-            } else {
-                min = Math.max(1, planned - 10);
-                max = planned + 10;
+            if (!"AVAILABLE".equalsIgnoreCase(newVehicle.getStatus())) {
+                throw new BadRequestException("Xe mới không khả dụng để thay thế");
             }
 
-            actualHours = (int) (Math.random() * (max - min + 1)) + min;
+            // Lấy detail hiện tại (xe cũ)
+            RentalOrderDetail mainDetail = order.getDetails().stream()
+                    .filter(d -> "RENTAL".equalsIgnoreCase(d.getType()))
+                    .findFirst()
+                    .orElseThrow(() -> new BadRequestException("Không tìm thấy chi tiết thuê"));
+
+            Vehicle oldVehicle = mainDetail.getVehicle();
+            oldVehicle.setStatus("AVAILABLE");
+            vehicleRepository.save(oldVehicle);
+
+            // Cập nhật detail sang xe mới
+            mainDetail.setVehicle(newVehicle);
+            mainDetail.setStatus("switched");
+            rentalOrderDetailRepository.save(mainDetail);
+
+            // Cập nhật xe mới
+            newVehicle.setStatus("BOOKED");
+            vehicleRepository.save(newVehicle);
+
+            // Có thể ghi chú lý do đổi
+            if (req.getNote() != null) {
+                mainDetail.setDescription(req.getNote());
+            }
         }
 
-        order.setActualHours(actualHours);
-        rentalOrderRepository.save(order);
-
-        long hoursUsed = actualHours;
-
-        VehicleModel model = vehicleModelService.findByVehicle(vehicle);
-        PricingRule rule = pricingRuleService.getPricingRuleBySeatAndVariant(
-                model.getSeatCount(), model.getVariant());
-
-        BigDecimal basePrice = pricingRuleService.calculateTotalPrice(
-                rule, order.getCoupon(), order.getPlannedHours(), order.getPlannedHours());
-
-        BigDecimal penalty = BigDecimal.ZERO;
-        if (hoursUsed > order.getPlannedHours()) {
-            long exceeded = hoursUsed - order.getPlannedHours();
-            penalty = penalty.add(rule.getExtraHourPrice().multiply(BigDecimal.valueOf(exceeded)));
-        }
-
-        List<Incident> incidents = incidentRepository.findByVehicle_VehicleId(vehicle.getVehicleId());
-        BigDecimal incidentCost = incidents.stream()
-                .filter(i -> i.getCost() != null)
-                .map(Incident::getCost)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        penalty = penalty.add(incidentCost);
-
-        BigDecimal totalPrice = basePrice.add(penalty);
-        BigDecimal deposit = order.getDepositAmount() != null ? order.getDepositAmount() : BigDecimal.ZERO;
-        BigDecimal remaining = totalPrice.subtract(deposit);
-        if (remaining.compareTo(BigDecimal.ZERO) < 0) remaining = BigDecimal.ZERO;
-
-        OrderResponse response = modelMapper.map(order, OrderResponse.class);
-        response.setVehicleId(vehicle.getVehicleId());
-        response.setCouponCode(order.getCoupon() != null ? order.getCoupon().getCode() : null);
-        response.setPenaltyFee(penalty);
-        response.setRemainingAmount(remaining);
-        response.setTotalPrice(totalPrice);
-        response.setActualHours(actualHours);
-
-        RentalStation station = vehicle.getRentalStation();
-        response.setStationId(station != null ? station.getStationId() : null);
-
-        return response;
-    }
-
-    @Override
-    public List<VehicleOrderHistoryResponse> getOrderHistoryByVehicle(Long vehicleId) {
-        List<RentalOrder> orders = rentalOrderRepository.findByVehicle_VehicleId(vehicleId);
-
-        return orders.stream().map(order -> {
-            Vehicle v = order.getVehicle();
-            VehicleModel model = vehicleModelService.findByVehicle(v);
-            RentalStation st = v.getRentalStation();
-
-            return VehicleOrderHistoryResponse.builder()
-                    .orderId(order.getOrderId())
-                    .vehicleId(v.getVehicleId())
-                    .plateNumber(v.getPlateNumber())
-
-                    .stationId(st != null ? st.getStationId() : null)
-                    .stationName(st != null ? st.getName() : null)
-
-                    .brand(model != null ? model.getBrand() : null)
-                    .color(model != null ? model.getColor() : null)
-                    .transmission(model != null ? model.getTransmission() : null)
-                    .seatCount(model != null ? model.getSeatCount() : null)
-                    .year(model != null ? model.getYear() : null)
-                    .variant(model != null ? model.getVariant() : null)
-
-                    .startTime(order.getStartTime())
-                    .endTime(order.getEndTime())
-                    .status(order.getStatus())
-
-                    .totalPrice(order.getTotalPrice())
-                    .depositAmount(order.getDepositAmount())
-                    .remainingAmount(order.getRemainingAmount())
-                    .build();
-        }).toList();
-    }
-    @Override
-    public OrderResponse updateOrder(UUID orderId, OrderUpdateRequest request) {
-        RentalOrder order = rentalOrderRepository.findById(orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
-        modelMapper.map(request, order);
         rentalOrderRepository.save(order);
         return modelMapper.map(order, OrderResponse.class);
+    }
+
+
+    @Override
+    public void deleteOrder(UUID orderId) {
+        if (!rentalOrderRepository.existsById(orderId)) {
+            throw new ResourceNotFoundException("Order not found");
+        }
+        rentalOrderRepository.deleteById(orderId);
     }
 
     @Override
     public List<VehicleOrderHistoryResponse> getOrderHistoryByCustomer(UUID customerId) {
         List<RentalOrder> orders = rentalOrderRepository.findByCustomer_UserId(customerId);
 
-        return orders.stream().map(order -> {
-            Vehicle v = order.getVehicle();
-            VehicleModel model = vehicleModelService.findByVehicle(v);
-            RentalStation st = v.getRentalStation();
+        return orders.stream()
+                .flatMap(order -> order.getDetails().stream().map(detail -> {
+                    Vehicle v = detail.getVehicle();
+                    VehicleModel m = vehicleModelService.findByVehicle(v);
+                    RentalStation s = v.getRentalStation();
+                    return VehicleOrderHistoryResponse.builder()
+                            .orderId(order.getOrderId())
+                            .vehicleId(v.getVehicleId())
+                            .plateNumber(v.getPlateNumber())
+                            .stationName(s != null ? s.getName() : null)
+                            .startTime(detail.getStartTime())
+                            .endTime(detail.getEndTime())
+                            .status(detail.getStatus())
+                            .totalPrice(detail.getPrice())
+                            .variant(m != null ? m.getVariant() : null)
+                            .build();
+                }))
+                .collect(Collectors.toList());
+    }
 
-            return VehicleOrderHistoryResponse.builder()
-                    .orderId(order.getOrderId())
-                    .vehicleId(v.getVehicleId())
-                    .plateNumber(v.getPlateNumber())
+    // ========================
+    // 5️⃣ XỬ LÝ PICKUP / RETURN
+    // ========================
+    @Override
+    @Transactional
+    public OrderResponse confirmPickup(UUID orderId) {
+        RentalOrder order = rentalOrderRepository.findById(orderId)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn thuê"));
 
-                    .stationId(st != null ? st.getStationId() : null)
-                    .stationName(st != null ? st.getName() : null)
-
-                    .brand(model != null ? model.getBrand() : null)
-                    .color(model != null ? model.getColor() : null)
-                    .transmission(model != null ? model.getTransmission() : null)
-                    .seatCount(model != null ? model.getSeatCount() : null)
-                    .year(model != null ? model.getYear() : null)
-                    .variant(model != null ? model.getVariant() : null)
-
-                    .startTime(order.getStartTime())
-                    .endTime(order.getEndTime())
-                    .status(order.getStatus())
-
-                    .totalPrice(order.getTotalPrice())
-                    .depositAmount(order.getDepositAmount())
-                    .remainingAmount(order.getRemainingAmount())
-                    .build();
-        }).toList();
+        order.setStatus("RENTAL");
+        rentalOrderRepository.save(order);
+        return modelMapper.map(order, OrderResponse.class);
     }
 
     @Override
-    public void deleteOrder(UUID orderId) {
-        if (!rentalOrderRepository.existsById(orderId)) {
-            throw new ResourceNotFoundException("Order not found with id: " + orderId);
+    @Transactional
+    public OrderResponse confirmReturn(UUID orderId, Integer manualActualDays) {
+        RentalOrder order = rentalOrderRepository.findById(orderId)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn thuê"));
+
+        RentalOrderDetail mainDetail = order.getDetails().stream()
+                .filter(d -> "RENTAL".equalsIgnoreCase(d.getType()))
+                .findFirst()
+                .orElseThrow(() -> new BadRequestException("Không có chi tiết thuê để xác nhận trả"));
+
+        Vehicle vehicle = mainDetail.getVehicle();
+        VehicleModel model = vehicleModelService.findByVehicle(vehicle);
+        PricingRule rule = pricingRuleService.getPricingRuleBySeatAndVariant(model.getSeatCount(), model.getVariant());
+
+        long actualDays = manualActualDays != null ? manualActualDays
+                : ChronoUnit.DAYS.between(mainDetail.getStartTime(), LocalDateTime.now());
+        BigDecimal total = rule.getDailyPrice().multiply(BigDecimal.valueOf(actualDays));
+
+        // Tính phí trả trễ
+        if (actualDays > ChronoUnit.DAYS.between(mainDetail.getStartTime(), mainDetail.getEndTime())) {
+            long extra = actualDays - ChronoUnit.DAYS.between(mainDetail.getStartTime(), mainDetail.getEndTime());
+            total = total.add(rule.getLateFeePerDay().multiply(BigDecimal.valueOf(extra)));
         }
-        rentalOrderRepository.deleteById(orderId);
+
+        mainDetail.setStatus("done");
+        mainDetail.setPrice(total);
+        rentalOrderDetailRepository.save(mainDetail);
+
+        vehicle.setStatus("AVAILABLE");
+        vehicleRepository.save(vehicle);
+
+        order.setTotalPrice(total);
+        order.setStatus("COMPLETED");
+        rentalOrderRepository.save(order);
+
+        return modelMapper.map(order, OrderResponse.class);
+    }
+
+    @Override
+    public List<OrderVerificationResponse> getPendingVerificationOrders() {
+        throw new UnsupportedOperationException("Pending verification flow chưa áp dụng cho cấu trúc mới");
+    }
+
+    @Override
+    public OrderResponse previewReturn(UUID orderId, Integer actualDays) {
+        return confirmReturn(orderId, actualDays);
+    }
+
+    @Override
+    public List<VehicleOrderHistoryResponse> getOrderHistoryByVehicle(Long vehicleId) {
+        throw new UnsupportedOperationException("TODO: implement later");
     }
 
     @Override
     public List<OrderResponse> getRentalOrders() {
         return rentalOrderRepository.findAll().stream()
-                .map(order -> {
-                    OrderResponse response = modelMapper.map(order, OrderResponse.class);
-
-                    // --- Vehicle ---
-                    if (order.getVehicle() != null) {
-                        response.setVehicleId(order.getVehicle().getVehicleId());
-
-                        if (order.getVehicle().getRentalStation() != null) {
-                            response.setStationId(order.getVehicle().getRentalStation().getStationId());
-                        }
-                    }
-
-                    // --- Coupon ---
-                    if (order.getCoupon() != null) {
-                        response.setCouponCode(order.getCoupon().getCode());
-                    }
-
-                    return response;
-                })
-                .collect(Collectors.toList());
+                .map(o -> modelMapper.map(o, OrderResponse.class))
+                .toList();
     }
-
 
     @Override
     public List<OrderResponse> findByCustomer_UserId(UUID customerId) {
-        return rentalOrderRepository.findByCustomer_UserId(customerId).stream()
-                .map(order -> {
-                    OrderResponse response = modelMapper.map(order, OrderResponse.class);
-                    response.setVehicleId(order.getVehicle() != null ? order.getVehicle().getVehicleId() : null);
-                    response.setCouponCode(order.getCoupon() != null ? order.getCoupon().getCode() : null);
-                    return response;
-                })
-                .collect(Collectors.toList());
-    }
-
-    private String currentShift(){
-        int h = LocalDateTime.now(VN_TZ).getHour();
-        if (h >= 0 && h<=12) return "Morning";
-        if (h >=12 && h<=18) return "Afternoon";
-        return "Evening";
-    }
-
-    private EmployeeSchedule ensureTodayAllShift(UUID staffId, Vehicle vehicle, String shiftTime) {
-        var today = LocalDate.now(VN_TZ);
-        return employeeScheduleRepository
-                .findByStaff_UserIdAndShiftDateAndShiftTime(staffId, today, shiftTime)
-                .orElseGet(() ->{
-                    var staff = userRepository.findById(staffId).orElseThrow(() -> new ResourceNotFoundException("Staff not found with id: " + staffId));
-                    var station = staff.getRentalStation() != null ? staff.getRentalStation()
-                            :  (vehicle != null ? vehicle.getRentalStation() : null);
-                    if (station == null) {
-                        throw new ResourceNotFoundException("Staff with id " + staffId + "is not in any station");
-                    }
-                    var es = EmployeeSchedule.builder()
-                            .staff(staff)
-                            .station(station)
-                            .shiftDate(today)
-                            .shiftTime(shiftTime)
-                            .pickupCount(0)
-                            .returnCount(0)
-                            .build();
-                    return employeeScheduleRepository.save(es);
-                });
+        return rentalOrderRepository.findByCustomer_UserId(customerId)
+                .stream().map(o -> modelMapper.map(o, OrderResponse.class))
+                .toList();
     }
 
     private JwtUserDetails currentUser() {
         var auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null) throw new BadRequestException("Bạn chưa đăng nhập");
-        Object p = auth.getPrincipal();
-        if (p instanceof JwtUserDetails jwt) return jwt;
-        throw new BadRequestException("Phiên đăng nhập không hợp lệ");
+        if (auth == null || !(auth.getPrincipal() instanceof JwtUserDetails jwt))
+            throw new BadRequestException("Phiên đăng nhập không hợp lệ");
+        return jwt;
     }
 }
